# bezier-city

./: .gitignore  README.md  bc.drawio  game.browser.test.js  game.js  game.test.js  gfx_repo.js  index.js  index.test.js  jest-puppeteer.config.cjs  jest-puppeteer.config.js  jest.config.js  newrelic.js  package-lock.json  package.json  revision.txt  webpack.config.js
backend/: city_1_with_junctions.json  pyproject.toml  server.py
backend/bezier_city_backend/: buildings.py
frontend/: game.js
public/: demo.html  index.html
public/js/: app.bundle.js  game.bundle.js  gfx.bundle.js
src/: game.js  gfx_repo.js  gfx_repo_client.js  index.js  lcg.js  street.js  street_maker.js
test/browser/: game.test.js
test/unit/: game.test.js  gfx_repo.test.js  gfx_repo_client.test.js  street.test.js  street_maker.test.js
views/: index.pug
